--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -21,7 +21,7 @@
             <TextView
                 android:id="@+id/tv_setting"
                 android:layout_width="match_parent"
-                app:fontFamily="@font/nunito"
+                app:fontFamily="@font/montserrat"
                 android:text="@string/setting"
                 android:textColor="@color/absoluteBlack"
                 android:paddingTop="@dimen/margin_8"
@@ -37,7 +37,7 @@
                 <TextView
                     android:id="@+id/tv_temp_setting"
                     android:layout_width="match_parent"
-                    app:fontFamily="@font/nunito"
+                    app:fontFamily="@font/montserrat"
                     android:textColor="@color/absoluteBlack"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/text_view_18sp"
@@ -55,7 +55,7 @@
                         android:layout_weight="1"
                         android:background="@color/default_button_bg"
                         android:textColor="@color/pureWhite"
-                        app:fontFamily="@font/nunito"
+                        app:fontFamily="@font/montserrat"
                         android:layout_height="wrap_content"
                         android:textSize="@dimen/text_view_14sp"
                         android:textAllCaps="false"
@@ -67,7 +67,7 @@
                         android:layout_weight="1"
                         android:background="@color/default_button_bg"
                         android:textColor="@color/pureWhite"
-                        app:fontFamily="@font/nunito"
+                        app:fontFamily="@font/montserrat"
                         android:layout_height="wrap_content"
                         android:textAllCaps="false"
                         android:textSize="@dimen/text_view_14sp"
@@ -79,7 +79,7 @@
                         android:layout_weight="2"
                         android:background="@color/default_button_bg"
                         android:textColor="@color/pureWhite"
-                        app:fontFamily="@font/nunito"
+                        app:fontFamily="@font/montserrat"
                         android:layout_height="wrap_content"
                         android:textAllCaps="false"
                         android:textSize="@dimen/text_view_14sp"
@@ -95,7 +95,7 @@
                 <TextView
                     android:id="@+id/tv_distance_setting"
                     android:layout_width="match_parent"
-                    app:fontFamily="@font/nunito"
+                    app:fontFamily="@font/montserrat"
                     android:textColor="@color/absoluteBlack"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/text_view_18sp"
@@ -113,7 +113,7 @@
                         android:layout_weight="1"
                         android:background="@color/default_button_bg"
                         android:textColor="@color/pureWhite"
-                        app:fontFamily="@font/nunito"
+                        app:fontFamily="@font/montserrat"
                         android:layout_height="wrap_content"
                         android:textSize="@dimen/text_view_14sp"
                         android:textAllCaps="false"
@@ -125,7 +125,7 @@
                         android:layout_weight="1"
                         android:background="@color/default_button_bg"
                         android:textColor="@color/pureWhite"
-                        app:fontFamily="@font/nunito"
+                        app:fontFamily="@font/montserrat"
                         android:layout_height="wrap_content"
                         android:textAllCaps="false"
                         android:textSize="@dimen/text_view_14sp"
@@ -137,7 +137,7 @@
                         android:background="@color/default_button_bg"
                         android:textColor="@color/pureWhite"
                         android:layout_weight="1"
-                        app:fontFamily="@font/nunito"
+                        app:fontFamily="@font/montserrat"
                         android:layout_height="wrap_content"
                         android:textAllCaps="false"
                         android:textSize="@dimen/text_view_14sp"
@@ -153,7 +153,7 @@
                 <TextView
                     android:id="@+id/tv_speed_setting"
                     android:layout_width="match_parent"
-                    app:fontFamily="@font/nunito"
+                    app:fontFamily="@font/montserrat"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/text_view_18sp"
                     android:text="@string/speed_setting_title"/>
@@ -170,7 +170,7 @@
                         android:layout_weight="1"
                         android:background="@color/default_button_bg"
                         android:textColor="@color/pureWhite"
-                        app:fontFamily="@font/nunito"
+                        app:fontFamily="@font/montserrat"
                         android:layout_height="wrap_content"
                         android:textSize="@dimen/text_view_14sp"
                         android:textAllCaps="false"
@@ -180,7 +180,7 @@
                         style="@style/Widget.AppCompat.Button.Borderless"
                         android:layout_width="0dp"
                         android:layout_weight="1"
-                        app:fontFamily="@font/nunito"
+                        app:fontFamily="@font/montserrat"
                         android:layout_height="wrap_content"
                         android:textAllCaps="false"
                         android:background="@color/default_button_bg"
@@ -192,7 +192,7 @@
                         style="@style/Widget.AppCompat.Button.Borderless"
                         android:layout_width="0dp"
                         android:layout_weight="2"
-                        app:fontFamily="@font/nunito"
+                        app:fontFamily="@font/montserrat"
                         android:layout_height="wrap_content"
                         android:background="@color/default_button_bg"
                         android:textColor="@color/pureWhite"
@@ -210,7 +210,7 @@
                 <TextView
                     android:id="@+id/tv_pressure_setting"
                     android:layout_width="match_parent"
-                    app:fontFamily="@font/nunito"
+                    app:fontFamily="@font/montserrat"
                     android:textColor="@color/absoluteBlack"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/text_view_18sp"
@@ -226,7 +226,7 @@
                         style="@style/Widget.AppCompat.Button.Borderless"
                         android:layout_width="0dp"
                         android:layout_weight="1"
-                        app:fontFamily="@font/nunito"
+                        app:fontFamily="@font/montserrat"
                         android:layout_height="wrap_content"
                         android:background="@color/default_button_bg"
                         android:textColor="@color/pureWhite"
@@ -238,7 +238,7 @@
                         style="@style/Widget.AppCompat.Button.Borderless"
                         android:layout_width="0dp"
                         android:layout_weight="1"
-                        app:fontFamily="@font/nunito"
+                        app:fontFamily="@font/montserrat"
                         android:layout_height="wrap_content"
                         android:background="@color/default_button_bg"
                         android:textColor="@color/pureWhite"
@@ -250,7 +250,7 @@
                         style="@style/Widget.AppCompat.Button.Borderless"
                         android:layout_width="0dp"
                         android:layout_weight="2"
-                        app:fontFamily="@font/nunito"
+                        app:fontFamily="@font/montserrat"
                         android:background="@color/default_button_bg"
                         android:textColor="@color/pureWhite"
                         android:layout_height="wrap_content"
@@ -268,7 +268,7 @@
                 <TextView
                     android:id="@+id/tv_explicit_setting"
                     android:layout_width="match_parent"
-                    app:fontFamily="@font/nunito"
+                    app:fontFamily="@font/montserrat"
                     android:layout_height="wrap_content"
                     android:textColor="@color/absoluteBlack"
                     android:textSize="@dimen/text_view_18sp"
@@ -284,7 +284,7 @@
                         style="@style/Widget.AppCompat.Button.Borderless"
                         android:layout_width="0dp"
                         android:layout_weight="1"
-                        app:fontFamily="@font/nunito"
+                        app:fontFamily="@font/montserrat"
                         android:layout_height="wrap_content"
                         android:background="@color/default_button_bg"
                         android:textColor="@color/pureWhite"
@@ -296,7 +296,7 @@
                         style="@style/Widget.AppCompat.Button.Borderless"
                         android:layout_width="0dp"
                         android:layout_weight="1"
-                        app:fontFamily="@font/nunito"
+                        app:fontFamily="@font/montserrat"
                         android:layout_height="wrap_content"
                         android:background="@color/default_button_bg"
                         android:textColor="@color/pureWhite"
@@ -314,7 +314,7 @@
                 <TextView
                     android:id="@+id/tv_rate"
                     android:layout_width="wrap_content"
-                    app:fontFamily="@font/nunito"
+                    app:fontFamily="@font/montserrat"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/text_view_18sp"
                     android:textColor="@color/absoluteBlack"
@@ -323,7 +323,7 @@
                 <TextView
                     android:id="@+id/tv_about"
                     android:layout_width="wrap_content"
-                    app:fontFamily="@font/nunito"
+                    app:fontFamily="@font/montserrat"
                     android:textColor="@color/absoluteBlack"
                     android:layout_marginTop="@dimen/margin_32"
                     android:layout_height="wrap_content"
