--- a/app/src/main/res/layout/about_me_layout.xml
+++ b/app/src/main/res/layout/about_me_layout.xml
@@ -27,7 +27,7 @@
         android:text="@string/about_setting_title"
         android:textColor="@color/absoluteBlack"
         android:textSize="@dimen/text_view_24sp"
-        app:fontFamily="@font/nunito"
+        app:fontFamily="@font/montserrat"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -53,7 +53,7 @@
             android:text="@string/about_dialog_intro"
             android:textColor="@color/absoluteBlack"
             android:textSize="@dimen/text_view_20sp"
-            app:fontFamily="@font/nunito" />
+            app:fontFamily="@font/montserrat" />
 
         <TextView
             android:layout_width="match_parent"
@@ -65,7 +65,7 @@
             android:text="@string/about_dialog_outro"
             android:textColor="@color/absoluteBlack"
             android:textSize="@dimen/text_view_20sp"
-            app:fontFamily="@font/nunito" />
+            app:fontFamily="@font/montserrat" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
