--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
+        android:layout_gravity="end|center"
         android:backgroundTint="@color/pureWhite"
         app:rippleColor="@color/bg_screen1"
         android:layout_margin="16dp"
@@ -38,7 +38,7 @@
             android:text="@string/location_list_title"
             android:textColor="@color/absoluteBlack"
             android:textSize="@dimen/text_view_24sp"
-            app:fontFamily="@font/nunito"
+            app:fontFamily="@font/montserrat"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -94,7 +94,7 @@
             android:id="@+id/loading_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:fontFamily="@font/nunito"
+            app:fontFamily="@font/montserrat"
             android:textSize="@dimen/text_view_18sp"
             android:layout_below="@id/loading_icon"
             android:layout_centerInParent="true"
@@ -121,7 +121,7 @@
             android:layout_centerInParent="true"
             android:textColor="@color/absoluteBlack"
             android:layout_below="@id/no_connection_icon"
-            app:fontFamily="@font/nunito"
+            app:fontFamily="@font/montserrat"
             android:textSize="@dimen/text_view_18sp"
             android:translationY="@dimen/margin_n_16"
             android:text="@string/no_connection_tv1"/>
@@ -132,7 +132,7 @@
             android:layout_centerInParent="true"
             android:textColor="@color/absoluteBlack"
             android:layout_below="@id/tv_1"
-            app:fontFamily="@font/nunito"
+            app:fontFamily="@font/montserrat"
             android:textSize="@dimen/text_view_18sp"
             android:translationY="@dimen/margin_n_16"
             android:text="@string/no_connection_tv2"/>
@@ -143,7 +143,7 @@
             android:layout_centerInParent="true"
             android:textColor="@color/absoluteBlack"
             android:layout_below="@id/tv_2"
-            app:fontFamily="@font/nunito"
+            app:fontFamily="@font/montserrat"
             android:textSize="@dimen/text_view_18sp"
             android:translationY="@dimen/margin_n_16"
             android:text="@string/no_connection_tv3"/>
