--- a/app/src/main/res/layout/forecast_item.xml
+++ b/app/src/main/res/layout/forecast_item.xml
@@ -9,7 +9,7 @@
     android:layout_marginEnd="@dimen/margin_8">
     <TextView
         android:id="@+id/date_forecast"
-        app:fontFamily="@font/nunito"
+        app:fontFamily="@font/montserrat"
         android:textSize="@dimen/text_view_20sp"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
@@ -24,7 +24,7 @@
     <TextView
         android:layout_gravity="center"
         android:id="@+id/temp_forecast"
-        app:fontFamily="@font/nunito"
+        app:fontFamily="@font/montserrat"
         android:textSize="@dimen/text_view_20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
