--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -20,7 +20,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_16"
                     android:layout_marginStart="@dimen/margin_4"
-                    app:fontFamily="@font/nunito"
+                    app:fontFamily="@font/montserrat"
                     android:textSize="@dimen/text_view_48sp"
                     android:gravity="center"
                     app:layout_constraintStart_toStartOf="parent"
@@ -31,7 +31,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/margin_4"
-                    app:fontFamily="@font/nunito"
+                    app:fontFamily="@font/montserrat"
                     android:textSize="@dimen/text_view_20sp"
                     android:gravity="center"
                     app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +51,7 @@
                     android:id="@+id/big_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:fontFamily="@font/nunito"
+                    app:fontFamily="@font/montserrat"
                     android:lineSpacingMultiplier="0.8"
                     android:text="@string/quote_placeholder"
                     android:textSize="@dimen/big_text"
@@ -62,7 +62,7 @@
                     android:id="@+id/small_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:fontFamily="@font/nunito"
+                    app:fontFamily="@font/montserrat"
                     android:textSize="@dimen/text_view_18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
