--- a/app/src/main/res/layout/location_list_item.xml
+++ b/app/src/main/res/layout/location_list_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -32,7 +33,7 @@
             android:paddingEnd="@dimen/margin_16"
             android:paddingTop="@dimen/margin_16"
             android:paddingBottom="@dimen/margin_16"
-            android:fontFamily="@font/nunito"
+            app:fontFamily="@font/montserrat"
             android:textSize="@dimen/text_view_24sp"
             android:textColor="@color/absoluteBlack"
             tools:ignore="RtlSymmetry" />
@@ -65,7 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:fontFamily="@font/nunito"
+                app:fontFamily="@font/montserrat"
                 android:textSize="@dimen/text_view_18sp"
                 android:textColor="@color/absoluteBlack"/>
         </LinearLayout>
