--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -1,7 +1,4 @@
 <resources>
-  <dimen name="init_scroll_welcome">
-    945px
-  </dimen>
   <dimen name="minimum_screen_width">
     360dp
   </dimen>
@@ -44,8 +41,14 @@
   <dimen name="margin_4">
     4dp
   </dimen>
+  <dimen name="margin_6">
+    6dp
+  </dimen>
   <dimen name="margin_8">
     8dp
+  </dimen>
+  <dimen name="margin_12">
+    12dp
   </dimen>
   <dimen name="margin_n_8">
     -8dp
@@ -131,6 +134,9 @@
   <dimen name="text_view_54sp">
     54sp
   </dimen>
+  <dimen name="text_view_62sp">
+    62sp
+  </dimen>
   <dimen name="widget_height">
     107dp
   </dimen>
@@ -139,5 +145,14 @@
   </dimen>
   <dimen name="widget_margin">
     8dp
+  </dimen>
+  <dimen name="temperature_pointer_width">
+    2dp
+  </dimen>
+  <dimen name="temperature_pointer_height">
+    28dp
+  </dimen>
+  <dimen name="temperature_bar_height">
+    12dp
   </dimen>
 </resources>
