--- a/app/src/main/res/values-sw411dp/dimens.xml
+++ b/app/src/main/res/values-sw411dp/dimens.xml
@@ -1,7 +1,4 @@
 <resources>
-  <dimen name="init_scroll_welcome">
-    1078.88px
-  </dimen>
   <dimen name="minimum_screen_width">
     411.0dp
   </dimen>
@@ -44,8 +41,14 @@
   <dimen name="margin_4">
     4.57dp
   </dimen>
+  <dimen name="margin_6">
+    6.85dp
+  </dimen>
   <dimen name="margin_8">
     9.13dp
+  </dimen>
+  <dimen name="margin_12">
+    13.7dp
   </dimen>
   <dimen name="margin_n_8">
     -9.13dp
@@ -131,6 +134,9 @@
   <dimen name="text_view_54sp">
     61.65sp
   </dimen>
+  <dimen name="text_view_62sp">
+    70.78sp
+  </dimen>
   <dimen name="widget_height">
     122.16dp
   </dimen>
@@ -139,5 +145,14 @@
   </dimen>
   <dimen name="widget_margin">
     9.13dp
+  </dimen>
+  <dimen name="temperature_pointer_width">
+    2.28dp
+  </dimen>
+  <dimen name="temperature_pointer_height">
+    31.97dp
+  </dimen>
+  <dimen name="temperature_bar_height">
+    13.7dp
   </dimen>
 </resources>
