--- a/app/src/main/res/values-sw540dp/dimens.xml
+++ b/app/src/main/res/values-sw540dp/dimens.xml
@@ -1,7 +1,4 @@
 <resources>
-  <dimen name="init_scroll_welcome">
-    1417.5px
-  </dimen>
   <dimen name="minimum_screen_width">
     540.0dp
   </dimen>
@@ -44,8 +41,14 @@
   <dimen name="margin_4">
     6.0dp
   </dimen>
+  <dimen name="margin_6">
+    9.0dp
+  </dimen>
   <dimen name="margin_8">
     12.0dp
+  </dimen>
+  <dimen name="margin_12">
+    18.0dp
   </dimen>
   <dimen name="margin_n_8">
     -12.0dp
@@ -131,6 +134,9 @@
   <dimen name="text_view_54sp">
     81.0sp
   </dimen>
+  <dimen name="text_view_62sp">
+    93.0sp
+  </dimen>
   <dimen name="widget_height">
     160.5dp
   </dimen>
@@ -139,5 +145,14 @@
   </dimen>
   <dimen name="widget_margin">
     12.0dp
+  </dimen>
+  <dimen name="temperature_pointer_width">
+    3.0dp
+  </dimen>
+  <dimen name="temperature_pointer_height">
+    42.0dp
+  </dimen>
+  <dimen name="temperature_bar_height">
+    18.0dp
   </dimen>
 </resources>
