--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,5 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="init_scroll_welcome">945px</dimen>
     <dimen name="minimum_screen_width">360dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
@@ -15,7 +14,9 @@
     <dimen name="indicator_stroke_width">1dp</dimen>
     <dimen name="indicator_size">8dp</dimen>
     <dimen name="margin_4">4dp</dimen>
+    <dimen name="margin_6">6dp</dimen>
     <dimen name="margin_8">8dp</dimen>
+    <dimen name="margin_12">12dp</dimen>
     <dimen name="margin_n_8">-8dp</dimen>
     <dimen name="margin_16">16dp</dimen>
     <dimen name="margin_n_16">-16dp</dimen>
@@ -44,9 +45,12 @@
     <dimen name="text_view_36sp">36sp</dimen>
     <dimen name="text_view_48sp">48sp</dimen>
     <dimen name="text_view_54sp">54sp</dimen>
-
+    <dimen name="text_view_62sp">62sp</dimen>
     <dimen name="widget_height">107dp</dimen>
     <dimen name="widget_width">360dp</dimen>
-
     <dimen name="widget_margin">8dp</dimen>
+
+    <dimen name="temperature_pointer_width">2dp</dimen>
+    <dimen name="temperature_pointer_height">28dp</dimen>
+    <dimen name="temperature_bar_height">12dp</dimen>
 </resources>
